Disconnect AppendEntries from ReplicatedLogEntry
AppendEntries and its receivers should be working on LogEntry only,
as the serialization sizes are somewthing inherent to a ReplicatedLog
implementation.

JIRA: CONTROLLER-2137
Change-Id: I6611ab8f0f9a0eec13e6a5dbfd89d9d0c357f5de
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>